# keyword-kg-linker

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  db.sh  develop.dockerfile  docker-compose.yml  embeddings.dockerfile  embeddings.py  linker.sh  load.sh  neo4j.sh  pom.xml  setup-neo4j.sh
include/connector/: neo4j.h
src/: main.cpp
src/connector/: neo4j.cpp
src/main/java/anonymous/: ArgParser.java  Config.java  Main.java
src/main/java/anonymous/candidate/: Document.java  EmbeddingIndex.java  EmbeddingIndexBuilder.java  EntityEmbedding.java  Index.java  IndexBuilder.java  LuceneIndex.java  LuceneIndexBuilder.java
src/main/java/anonymous/disambiguation/: LevenshteinRanker.java  Ranker.java  Result.java
src/main/java/anonymous/linking/: CSVEntityLinker.java  EmbeddingLinker.java  EntityLinker.java  KeywordLinker.java  MentionLinker.java
src/main/java/anonymous/load/: DataReader.java  EmbeddingIndexer.java  Indexer.java  LuceneIndexer.java  Progressable.java
src/main/java/anonymous/utils/: MathUtils.java
src/main/java/dk/aau/dkwe/: ArgParser.java  Config.java  Main.java
src/main/java/dk/aau/dkwe/candidate/: Document.java  EmbeddingIndex.java  EmbeddingIndexBuilder.java  EntityEmbedding.java  Index.java  IndexBuilder.java  LuceneIndex.java  LuceneIndexBuilder.java
src/main/java/dk/aau/dkwe/connector/: Neo4J.java
src/main/java/dk/aau/dkwe/disambiguation/: LevenshteinRanker.java  Ranker.java  Result.java
src/main/java/dk/aau/dkwe/linking/: CSVEntityLinker.java  EmbeddingLinker.java  EntityLinker.java  KeywordLinker.java  (+2 more)
(+6 files in other folders)
